// Schema do Prisma — Sistema Lanchonete Sabor & Cia
//
// IMPORTANTE: este arquivo é mantido manualmente em espelho 1:1 com
// database/init/001_schema.sql, que é a FONTE DA VERDADE do schema do
// banco (é ele que roda no container do Postgres no deploy). O Prisma
// aqui é usado apenas como CLIENTE TIPADO (`prisma generate`) — nunca
// rode `prisma migrate` contra este schema, pois ele não conseguiria
// representar fielmente os triggers de especialização (item_vendavel)
// nem o índice único parcial de cupom, que só existem no script SQL.
//
// Convenção de nomenclatura: campos em camelCase no TypeScript, mapeados
// via @map/@@map para as colunas/tabelas em snake_case do banco.

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Cliente {
  id                       Int      @id @default(autoincrement())
  nome                     String   @db.VarChar(150)
  telefone                 String   @db.VarChar(20)
  email                    String?  @db.VarChar(150)
  enderecoPadraoLogradouro String?  @map("endereco_padrao_logradouro") @db.VarChar(150)
  enderecoPadraoNumero     String?  @map("endereco_padrao_numero") @db.VarChar(10)
  enderecoPadraoBairro     String?  @map("endereco_padrao_bairro") @db.VarChar(100)
  enderecoPadraoCidade     String?  @map("endereco_padrao_cidade") @db.VarChar(100)
  enderecoPadraoCep        String?  @map("endereco_padrao_cep") @db.VarChar(9)
  criadoEm                 DateTime @default(now()) @map("criado_em") @db.Timestamp(6)

  pedidos Pedido[]

  @@map("cliente")
}

model Mesa {
  id     Int     @id @default(autoincrement())
  numero Int     @unique
  ativa  Boolean @default(true)

  pedidos Pedido[]

  @@map("mesa")
}

model Categoria {
  id   Int    @id @default(autoincrement())
  nome String @unique @db.VarChar(50)

  produtos Produto[]

  @@map("categoria")
}

/// Supertipo da especialização total/disjunta Produto/Combo.
/// `tipo` é mantido consistente pelos triggers definidos em
/// database/init/001_schema.sql (trg_produto_set_tipo / trg_combo_set_tipo).
model ItemVendavel {
  id    Int     @id @default(autoincrement())
  nome  String  @db.VarChar(150)
  preco Decimal @db.Decimal(10, 2)
  tipo  String  @db.VarChar(10)

  produto     Produto?
  combo       Combo?
  itensPedido ItemPedido[]

  @@map("item_vendavel")
}

model Produto {
  id          Int     @id
  categoriaId Int     @map("categoria_id")
  descricao   String?

  itemVendavel        ItemVendavel         @relation(fields: [id], references: [id], onDelete: Cascade)
  categoria           Categoria            @relation(fields: [categoriaId], references: [id])
  variacoes           Variacao[]
  comboItens          ComboItem[]
  produtoIngredientes ProdutoIngrediente[]
  produtoPromocoes    ProdutoPromocao[]

  @@map("produto")
}

model Combo {
  id        Int     @id
  descricao String?

  itemVendavel ItemVendavel @relation(fields: [id], references: [id], onDelete: Cascade)
  comboItens   ComboItem[]

  @@map("combo")
}

/// Associativa N:N — quais produtos compõem cada combo.
model ComboItem {
  id         Int @id @default(autoincrement())
  comboId    Int @map("combo_id")
  produtoId  Int @map("produto_id")
  quantidade Int @default(1)

  combo   Combo   @relation(fields: [comboId], references: [id], onDelete: Cascade)
  produto Produto @relation(fields: [produtoId], references: [id])

  @@unique([comboId, produtoId])
  @@map("combo_item")
}

model Variacao {
  id             Int     @id @default(autoincrement())
  produtoId      Int     @map("produto_id")
  nome           String  @db.VarChar(50)
  precoAdicional Decimal @default(0) @map("preco_adicional") @db.Decimal(10, 2)

  produto     Produto      @relation(fields: [produtoId], references: [id], onDelete: Cascade)
  itensPedido ItemPedido[]

  @@map("variacao")
}

model Adicional {
  id    Int     @id @default(autoincrement())
  nome  String  @db.VarChar(50)
  preco Decimal @db.Decimal(10, 2)

  itensPedidoAdicional ItemPedidoAdicional[]

  @@map("adicional")
}

model Fornecedor {
  id       Int     @id @default(autoincrement())
  nome     String  @db.VarChar(150)
  telefone String? @db.VarChar(20)
  email    String? @db.VarChar(150)

  ingredientes Ingrediente[]

  @@map("fornecedor")
}

model Ingrediente {
  id                Int     @id @default(autoincrement())
  nome              String  @db.VarChar(100)
  quantidadeEstoque Decimal @default(0) @map("quantidade_estoque") @db.Decimal(10, 3)
  unidadeMedida     String  @map("unidade_medida") @db.VarChar(10)
  fornecedorId      Int     @map("fornecedor_id")

  fornecedor          Fornecedor           @relation(fields: [fornecedorId], references: [id])
  produtoIngredientes ProdutoIngrediente[]

  @@map("ingrediente")
}

/// Associativa N:N — "ficha técnica" de cada produto.
model ProdutoIngrediente {
  id                  Int     @id @default(autoincrement())
  produtoId           Int     @map("produto_id")
  ingredienteId       Int     @map("ingrediente_id")
  quantidadeUtilizada Decimal @map("quantidade_utilizada") @db.Decimal(10, 3)

  produto     Produto     @relation(fields: [produtoId], references: [id], onDelete: Cascade)
  ingrediente Ingrediente @relation(fields: [ingredienteId], references: [id])

  @@unique([produtoId, ingredienteId])
  @@map("produto_ingrediente")
}

model Cargo {
  id   Int    @id @default(autoincrement())
  nome String @unique @db.VarChar(30)

  funcionarioCargos FuncionarioCargo[]

  @@map("cargo")
}

model Funcionario {
  id       Int     @id @default(autoincrement())
  nome     String  @db.VarChar(150)
  telefone String? @db.VarChar(20)
  email    String? @db.VarChar(150)

  funcionarioCargos FuncionarioCargo[]
  pedidosAtendidos  Pedido[]           @relation("PedidoAtendente")
  entregasFeitas    Entrega[]          @relation("EntregaEntregador")

  @@map("funcionario")
}

/// Associativa histórica N:N — cargo exercido por funcionário em cada período.
model FuncionarioCargo {
  id            Int       @id @default(autoincrement())
  funcionarioId Int       @map("funcionario_id")
  cargoId       Int       @map("cargo_id")
  dataInicio    DateTime  @map("data_inicio") @db.Date
  dataFim       DateTime? @map("data_fim") @db.Date

  funcionario Funcionario @relation(fields: [funcionarioId], references: [id], onDelete: Cascade)
  cargo       Cargo       @relation(fields: [cargoId], references: [id])

  @@map("funcionario_cargo")
}

model Promocao {
  id            Int      @id @default(autoincrement())
  nome          String   @db.VarChar(100)
  dataInicio    DateTime @map("data_inicio") @db.Date
  dataFim       DateTime @map("data_fim") @db.Date
  tipoDesconto  String   @map("tipo_desconto") @db.VarChar(10)
  valorDesconto Decimal  @map("valor_desconto") @db.Decimal(10, 2)

  produtoPromocoes ProdutoPromocao[]

  @@map("promocao")
}

/// Associativa N:N — histórico de participação de produtos em promoções.
model ProdutoPromocao {
  id         Int @id @default(autoincrement())
  produtoId  Int @map("produto_id")
  promocaoId Int @map("promocao_id")

  produto  Produto  @relation(fields: [produtoId], references: [id], onDelete: Cascade)
  promocao Promocao @relation(fields: [promocaoId], references: [id], onDelete: Cascade)

  @@unique([produtoId, promocaoId])
  @@map("produto_promocao")
}

model Cupom {
  id            Int      @id @default(autoincrement())
  codigo        String   @unique @db.VarChar(30)
  tipoDesconto  String   @map("tipo_desconto") @db.VarChar(10)
  valorDesconto Decimal  @map("valor_desconto") @db.Decimal(10, 2)
  dataInicio    DateTime @map("data_inicio") @db.Date
  dataFim       DateTime @map("data_fim") @db.Date

  /// Regra "1 uso por cliente" é aplicada via índice único parcial
  /// (ux_pedido_cupom_cliente) definido só no SQL — não representável
  /// em constraint do schema.prisma. Ver database/init/001_schema.sql.
  pedidos Pedido[]

  @@map("cupom")
}

model FormaPagamento {
  id   Int    @id @default(autoincrement())
  nome String @unique @db.VarChar(30)

  pedidoPagamentos PedidoPagamento[]

  @@map("forma_pagamento")
}

model Pedido {
  id          Int      @id @default(autoincrement())
  dataHora    DateTime @default(now()) @map("data_hora") @db.Timestamp(6)
  canal       String   @db.VarChar(10)
  clienteId   Int?     @map("cliente_id")
  mesaId      Int?     @map("mesa_id")
  atendenteId Int      @map("atendente_id")
  cupomId     Int?     @map("cupom_id")
  observacoes String?

  cliente   Cliente?    @relation(fields: [clienteId], references: [id])
  mesa      Mesa?       @relation(fields: [mesaId], references: [id])
  atendente Funcionario @relation("PedidoAtendente", fields: [atendenteId], references: [id])
  cupom     Cupom?      @relation(fields: [cupomId], references: [id])

  itens           ItemPedido[]
  statusHistorico StatusPedidoHistorico[]
  pagamentos      PedidoPagamento[]
  entrega         Entrega?
  avaliacao       AvaliacaoPedido?

  /// Status atual NÃO é uma coluna — é sempre o último registro de
  /// statusHistorico (ordenado por dataHora). Ver services/pedidoService.

  @@map("pedido")
}

model ItemPedido {
  id                     Int     @id @default(autoincrement())
  pedidoId               Int     @map("pedido_id")
  itemVendavelId         Int     @map("item_vendavel_id")
  variacaoId             Int?    @map("variacao_id")
  quantidade             Int
  precoUnitarioPraticado Decimal @map("preco_unitario_praticado") @db.Decimal(10, 2)
  observacao             String? @db.VarChar(200)

  pedido       Pedido       @relation(fields: [pedidoId], references: [id], onDelete: Cascade)
  itemVendavel ItemVendavel @relation(fields: [itemVendavelId], references: [id])
  variacao     Variacao?    @relation(fields: [variacaoId], references: [id])

  adicionais ItemPedidoAdicional[]

  @@map("item_pedido")
}

/// Associativa N:N — adicionais escolhidos em cada item do pedido.
model ItemPedidoAdicional {
  id             Int     @id @default(autoincrement())
  itemPedidoId   Int     @map("item_pedido_id")
  adicionalId    Int     @map("adicional_id")
  precoPraticado Decimal @map("preco_praticado") @db.Decimal(10, 2)

  itemPedido ItemPedido @relation(fields: [itemPedidoId], references: [id], onDelete: Cascade)
  adicional  Adicional  @relation(fields: [adicionalId], references: [id])

  @@unique([itemPedidoId, adicionalId])
  @@map("item_pedido_adicional")
}

/// Entidade fraca — log completo de mudanças de status do pedido.
model StatusPedidoHistorico {
  id       Int      @id @default(autoincrement())
  pedidoId Int      @map("pedido_id")
  status   String   @db.VarChar(20)
  dataHora DateTime @default(now()) @map("data_hora") @db.Timestamp(6)

  pedido Pedido @relation(fields: [pedidoId], references: [id], onDelete: Cascade)

  @@map("status_pedido_historico")
}

/// Associativa N:N — um pedido pode ser pago com múltiplas formas simultaneamente.
model PedidoPagamento {
  id               Int     @id @default(autoincrement())
  pedidoId         Int     @map("pedido_id")
  formaPagamentoId Int     @map("forma_pagamento_id")
  valorPago        Decimal @map("valor_pago") @db.Decimal(10, 2)

  pedido         Pedido         @relation(fields: [pedidoId], references: [id], onDelete: Cascade)
  formaPagamento FormaPagamento @relation(fields: [formaPagamentoId], references: [id])

  @@map("pedido_pagamento")
}

/// Entidade fraca, 1:1 opcional com pedido — só existe quando é delivery.
/// Endereço "congelado" no momento do pedido (decisão 6 do MER).
model Entrega {
  id                 Int       @id @default(autoincrement())
  pedidoId           Int       @unique @map("pedido_id")
  entregadorId       Int       @map("entregador_id")
  enderecoLogradouro String    @map("endereco_logradouro") @db.VarChar(150)
  enderecoNumero     String    @map("endereco_numero") @db.VarChar(10)
  enderecoBairro     String    @map("endereco_bairro") @db.VarChar(100)
  enderecoCidade     String    @map("endereco_cidade") @db.VarChar(100)
  enderecoCep        String    @map("endereco_cep") @db.VarChar(9)
  taxaEntrega        Decimal   @map("taxa_entrega") @db.Decimal(10, 2)
  dataHoraSaida      DateTime? @map("data_hora_saida") @db.Timestamp(6)
  dataHoraEntrega    DateTime? @map("data_hora_entrega") @db.Timestamp(6)

  pedido     Pedido      @relation(fields: [pedidoId], references: [id], onDelete: Cascade)
  entregador Funcionario @relation("EntregaEntregador", fields: [entregadorId], references: [id])

  @@map("entrega")
}

/// Entidade fraca, 1:1 opcional com pedido — avaliação é opcional.
model AvaliacaoPedido {
  id         Int      @id @default(autoincrement())
  pedidoId   Int      @unique @map("pedido_id")
  nota       Int
  comentario String?
  dataHora   DateTime @default(now()) @map("data_hora") @db.Timestamp(6)

  pedido Pedido @relation(fields: [pedidoId], references: [id], onDelete: Cascade)

  @@map("avaliacao_pedido")
}
